# Conquer-Space

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  3rdpartylicenses.txt  CMakeLists.txt  README.md  cpplint.cfg  echo  illinois_market.csv  imgui_log.txt  setup_env.bat  setup_env.sh  test.txt  vcpkg.json  windows.yml
lib/: CMakeLists.txt
lib/cmake/: RmlUiConfig.cmake  sol2Config.cmake
lib/include/: stb_vorbis.h
lib/include/glad/: glad.h
lib/src/: glad.c
src/: .editorconfig  CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  clientoptions.cpp  clientoptions.h  conquerspace.h
src/client/components/: clientctx.h  planetrendering.h  provincecentering.cpp  provincecentering.h  rightclick.h
src/client/headless/: generate.cpp  generate.h  headlessapplication.cpp  headlessapplication.h  headlessluafunctions.cpp  headlessluafunctions.h  headlessmode.cpp  headlessmode.h  loadluafile.cpp  loadluafile.h
src/client/scenes/: fieldviewerscene.cpp  fieldviewerscene.h  loadingscene.cpp  loadingscene.h  mainmenuscene.cpp  mainmenuscene.h  modelscene.cpp  modelscene.h  rmlscene.cpp  rmlscene.h  scene.h  texttestscene.cpp  texttestscene.h  universeloadingscene.cpp  universeloadingscene.h  universescene.cpp  universescene.h
src/client/scripting/: clientscripting.cpp  clientscripting.h  clientuielements.cpp  clientuielements.h  imguienums.cpp  imguienums.h  imguifunctiondefs.cpp  imguifunctiondefs.h  imguifunctions.cpp  imguifunctions.h  implotfunctions.cpp  implotfunctions.h
src/client/systems/: assetloading.cpp  assetloading.h  civilizationinfopanel.cpp  civilizationinfopanel.h  clientscripting.cpp  clientscripting.h  countrywindow.cpp  countrywindow.h  creditswindow.cpp  creditswindow.h  galaxyrenderer.cpp  galaxyrenderer.h  loadgamewindow.cpp  loadgamewindow.h  marketwindow.cpp  marketwindow.h  orbitfilter.cpp  orbitfilter.h  provincewindow.cpp  provincewindow.h  savegame.cpp  savegame.h  settingswindow.cpp  settingswindow.h  syscommand.cpp  syscommand.h  sysdebuggui.cpp  sysdebuggui.h  sysfieldviewer.cpp  sysfieldviewer.h  sysgui.cpp  sysgui.h  sysoptionswindow.cpp  sysoptionswindow.h  syspausemenu.cpp  syspausemenu.h  sysplanetterraingenerator.cpp  sysplanetterraingenerator.h  sysplanetviewer.cpp  sysplanetviewer.h  (+10 more)
src/client/util/: assetwindow.cpp  assetwindow.h  searchablemenu.cpp  searchablemenu.h
src/common/: CMakeLists.txt  game.cpp  game.h  node.cpp  node.h  simulation.cpp  simulation.h  stardate.cpp  stardate.h  universe.cpp  universe.h  version.h  version.h.in
src/common/actions/: cityactions.cpp  cityactions.h  factoryconstructaction.cpp  factoryconstructaction.h  shiplaunchaction.cpp  shiplaunchaction.h  sysresourcetransfer.cpp  sysresourcetransfer.h
src/common/components/: area.h  auction.h  bodies.cpp  bodies.h  coordinates.cpp  coordinates.h  economy.cpp  economy.h  event.h  history.h  infrastructure.h  maneuver.h  market.cpp  market.h  model.h  movement.h  name.cpp  name.h  orbit.cpp  orbit.h  orders.h  organizations.h  player.h  population.h  ports.h  resource.cpp  resource.h  science.h  ships.cpp  ships.h  spaceport.h  stardate.cpp  stardate.h  surface.h  tags.h  units.h
src/common/loading/: fields.cpp  fields.h  hjsonloader.cpp  hjsonloader.h  loadcities.cpp  loadcities.h  loadcountries.cpp  loadcountries.h  loadgoods.cpp  loadgoods.h  loadnames.cpp  loadnames.h  loadorbit.cpp  loadorbit.h  loadplanets.cpp  loadplanets.h  loadprovinces.cpp  loadprovinces.h  loadsatellites.cpp  loadsatellites.h  loadterrain.cpp  loadterrain.h  loadutil.cpp  loadutil.h  planetloader.cpp  planetloader.h  recipeloader.cpp  recipeloader.h  technology.cpp  technology.h  timezoneloader.cpp  timezoneloader.h
src/common/scripting/: functionreg.h  luafunctions.cpp  luafunctions.h  scripting.cpp  scripting.h
src/common/systems/: isimulationsystem.h  scriptrunner.cpp  scriptrunner.h  syseconomy.cpp  syseconomy.h  sysinfrastructure.cpp  sysinfrastructure.h  syspopulation.cpp  syspopulation.h  sysresourcegen.cpp  sysresourcegen.h  sysresourcetransfer.cpp  sysresourcetransfer.h  systransport.cpp  systransport.h  sysuniversegenerator.cpp  sysuniversegenerator.h
src/common/util/: logging.cpp  logging.h  nameutil.cpp  nameutil.h  paths.cpp  paths.h  profiler.cpp  profiler.h  string.cpp  string.h  strip.cpp  strip.h  text.cpp  text.h  utilnumberdisplay.h  uuid.h
src/core/: CMakeLists.txt  game.cpp  game.h  simulation.cpp  simulation.h  universe.cpp  universe.h  version.h  version.h.in
src/core/actions/: cityactions.cpp  cityactions.h  factoryconstructaction.cpp  factoryconstructaction.h  shiplaunchaction.cpp  shiplaunchaction.h  sysresourcetransfer.cpp  sysresourcetransfer.h
src/core/components/: area.h  auction.h  bodies.h  colony.h  coordinates.cpp  coordinates.h  discovery.h  event.h  history.h  infrastructure.h  labor.h  launchvehicle.h  maneuver.h  market.cpp  market.h  model.h  modifier.cpp  modifier.h  name.h  orbit.cpp  orbit.h  orders.h  organizations.h  pid.cpp  pid.h  player.h  population.h  ports.h  projects.h  resource.cpp  resource.h  resourceledger.cpp  resourceledger.h  science.h  ships.h  spaceport.h  stardate.cpp  stardate.h  surface.h  tags.h  (+1 more)
src/core/loading/: economyloader.cpp  economyloader.h  fields.cpp  fields.h  hjsonloader.cpp  hjsonloader.h  (+36 more)
src/engine/: CMakeLists.txt  application.cpp  application.h  asset.cpp  asset.h  assetmanager.cpp  assetmanager.h  clientoptions.cpp  clientoptions.h  cqspgui.cpp  cqspgui.h  engine.h  enginelogger.cpp  enginelogger.h  gamestate.h  glfwdebug.h  glfwwindow.cpp  glfwwindow.h  gui.cpp  gui.h  imconfig.h  paths.cpp  paths.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  textasset.h  userinput.cpp  userinput.h  window.h
src/util/: utilnumberdisplay.h
test/: CMakeLists.txt
test/client/: clientoptionstest.cpp
test/common/: CMakeLists.txt  main.cpp
test/components/: orbittest.cpp  resourcetest.cpp  vectortest.cpp
test/engine/: CMakeLists.txt  scenemanagertest.cpp
test/simulation/: movementtest.cpp
test/smoketest/: smoketest.lua
test/util/: utilnumberdisplaytest.cpp
(+1206 files in other folders)
